--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -1,8 +1,8 @@
 ---
 layout: 'base.html'
 canonical: 'Official link for that page (https://www.site.com)'
-description: "Meta description for the page"
-metaTitle: 'Title that shows up on google searches'
+description: 'Meta description for the page'
+meta-title: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'blog/'
 ---
