Fixed some formatting

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,6 +1,5 @@
 ---
 layout: 'base.html'
-canonical: 'Official link for that page (https://www.site.com)'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
@@ -14,6 +13,8 @@ permalink: 'contact/'
 {% block pageCSS %}
 <link rel="stylesheet" href="/css/contact.css">
 {% endblock %}
+
+<!-- Enter html code below -->
 
 <!-- ============================================ -->
 <!--                    LANDING                   -->
