--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -1,8 +1,7 @@
 ---
 layout: 'base.html'
-canonical: 'Official link for that page (https://www.site.com)'
 description: 'Meta description for the page'
-metaTitle: 'Title that shows up on google searches'
+metaTitle: 'Title that shows up on OG social Media Title Tag'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'reviews/'
 ---
@@ -14,6 +13,8 @@ permalink: 'reviews/'
 {% block pageCSS %}
 <link rel="stylesheet" href="/css/reviews.css">
 {% endblock %}
+
+<!-- Enter html code below -->
 
 <!-- ============================================ -->
 <!--                    LANDING                   -->
