add 11ty navigation, improve menu accessibility

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@ description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: '/'
+eleventyNavigation:
+    key: Home
+    order: 100
 ---
 
 <!-- 
