--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,6 +4,9 @@ description: "Meta description for the page"
 meta-title: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'about/'
+eleventyNavigation:
+    key: About Us
+    order: 200
 ---
 
 {% block preload %}
