--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -4,6 +4,9 @@ description: 'Meta description for the page'
 meta-title: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'blog/'
+eleventyNavigation:
+    key: Blog
+    order: 500
 ---
 
 {% block preload %}
