--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -4,6 +4,9 @@ description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'contact/'
+eleventyNavigation:
+    key: Contact
+    order: 600
 ---
 
 {% block preload %}
