--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -4,6 +4,9 @@ description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'projects/'
+eleventyNavigation:
+    key: Projects
+    order: 300
 ---
 
 {% block preload %}
