--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -4,6 +4,9 @@ description: 'Meta description for the page'
 metaTitle: 'Title that shows up on OG social Media Title Tag'
 tagTitle: 'Company Name | What They Do | Town and State'
 permalink: 'reviews/'
+eleventyNavigation:
+    key: Reviews
+    order: 400
 ---
 
 {% block preload %}
