--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -10,11 +10,11 @@ eleventyNavigation:
 ---
 
 {% block preload %}
-<link rel="preload" as="image" href="/assets/images/cabinets2-m.jpg">
+    <link rel="preload" as="image" href="/assets/images/cabinets2-m.jpg">
 {% endblock %}
 
 {% block pageCSS %}
-<link rel="stylesheet" href="/css/reviews.css">
+    <link rel="stylesheet" href="/css/reviews.css">
 {% endblock %}
 
 <!-- Enter html code below -->
@@ -25,11 +25,7 @@ eleventyNavigation:
 
 <section id="int-hero">
     <h1 id="home-h">Our Reviews</h1>
-    <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/cabinets2.jpg" alt="" width="400" height="662">
-    </picture>
+    {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
 </section>
 
 <!-- ============================================ -->
@@ -41,86 +37,86 @@ eleventyNavigation:
         <div class="review">
             <picture>
                 <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
-                </picture>
-                <p>
+            </picture>
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-                <div class="star-group">
+            <div class="star-group">
                 <span class="name">B Miller<span class="desc">Homeowner</span></span>
-                    <picture>
+                <picture>
                     <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
-                </div>
+                </picture>
+            </div>
         </div>
         <div class="review">
             <picture>
                 <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
-                </picture>
-                <p>
+            </picture>
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-                <div class="star-group">
+            <div class="star-group">
                 <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
-                    <picture>
+                <picture>
                     <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
-                </div>
+                </picture>
+            </div>
         </div>
         <div class="review">
             <picture>
                 <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
-                </picture>
-                <p>
+            </picture>
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-                <div class="star-group">
-                    <span class="name">Alex L.<span class="desc">Homeowner</span></span>
-                    <picture>
+            <div class="star-group">
+                <span class="name">Alex L.<span class="desc">Homeowner</span></span>
+                <picture>
                     <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
-                </div>
+                </picture>
+            </div>
         </div>
         <div class="review">
             <picture>
                 <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile-woman.svg" alt="" width="99" height="99">
-                </picture>
-                <p>
+            </picture>
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-                <div class="star-group">
+            <div class="star-group">
                 <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
-                    <picture>
+                <picture>
                     <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
-                </div>
+                </picture>
+            </div>
         </div>
         <div class="review">
             <picture>
                 <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
-                </picture>
-                <p>
+            </picture>
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-                <div class="star-group">
+            <div class="star-group">
                 <span class="name">Leo N.<span class="desc">Homeowner</span></span>
-                    <picture>
+                <picture>
                     <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
-                </div>
+                </picture>
+            </div>
         </div>
         <div class="review">
             <picture>
                 <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
-                </picture>
-                <p>
+            </picture>
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-                <div class="star-group">
-                    <span class="name">Brian A.<span class="desc">Homeowner</span></span>
-                    <picture>
+            <div class="star-group">
+                <span class="name">Brian A.<span class="desc">Homeowner</span></span>
+                <picture>
                     <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
-                </div>
+                </picture>
+            </div>
         </div>
     </div>
 </section>
@@ -137,9 +133,6 @@ eleventyNavigation:
         </p>
         <a href="/contact.html" class="button-solid">Free Estimate</a>
     </div>
-    <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.webp">
-        <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
-        </picture>
+    {% image './src/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
+
 </section>
